--- a/docroot/sites/all/modules/custom/sbac_core/components/review/sass/review.scss
+++ b/docroot/sites/all/modules/custom/sbac_core/components/review/sass/review.scss
@@ -529,4 +529,8 @@
 	}
 }
 
+/* Sharing Options- Copy Link to Clipboard button */
+body.admin-menu #global-zeroclipboard-html-bridge {
+	margin-top: -28px;
+}
 
